--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/node": "^18.16.0",
     "@types/path-browserify": "^1.0.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "fast-glob": "^3.2.12",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.2.0"
   }
 }
